--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
+    "@types/styled-components": "^5.1.21",
     "next": "12.0.7",
+    "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "next-compose-plugins": "^2.2.1",
-    "styled-components": "^5.2.1",
     "react-redux": "^7.2.4",
-    "@reduxjs/toolkit": "^1.6.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "typescript": "^4.1.3",
+    "@types/react-redux": "^7.1.16",
     "autoprefixer": "^10.1.0",
-    "tailwindcss": "^2.0.2",
-    "postcss": "^8.2.4",
     "babel-plugin-styled-components": "^1.12.0",
-    "@types/react-redux": "^7.1.16"
+    "postcss": "^8.2.4",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
   }
 }
