--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@atlaskit/tooltip": "^17.5.4",
     "@reduxjs/toolkit": "^1.6.0",
     "@types/styled-components": "^5.1.21",
     "next": "12.0.7",
     "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-motion-ui-pack": "^0.10.3",
     "react-redux": "^7.2.4",
+    "react-select": "^5.2.2",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
