--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@atlaskit/tooltip": "^17.5.4",
+    "@formspree/react": "^2.2.4",
     "@reduxjs/toolkit": "^1.6.0",
     "@types/styled-components": "^5.1.21",
+    "axios": "^0.25.0",
     "next": "12.0.7",
     "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
